--- a/nginx.conf
+++ b/nginx.conf
@@ -22,6 +22,14 @@ http {
         server user-service:8000;
     }
 
+    upstream prometheus_service {
+        server prometheus-service:9090;
+    }
+
+    upstream grafana_service {
+        server grafana-service:3000;
+    }
+
     server {
         listen 80;
         server_name localhost;
@@ -44,6 +52,14 @@ http {
 
         location /user/ {
             proxy_pass http://user_service/;
+        }
+
+        location /prometheus/ {
+            proxy_pass http://prometheus_service/;
+        }
+
+        location /grafana/ {
+            proxy_pass http://grafana_service/;
         }
     }
 }
