--- a/nginx.conf
+++ b/nginx.conf
@@ -55,11 +55,11 @@ http {
         }
 
         location /prometheus/ {
-            proxy_pass http://prometheus_service/;
+            proxy_pass http://prometheus_service;
         }
 
         location /grafana/ {
-            proxy_pass http://grafana_service/;
+            proxy_pass http://grafana_service;
         }
     }
 }
