--- a/nginx.conf
+++ b/nginx.conf
@@ -54,11 +54,11 @@ http {
             proxy_pass http://user_service/;
         }
 
-        location /prometheus/ {
+        location /prometheus {
             proxy_pass http://prometheus_service;
         }
 
-        location /grafana/ {
+        location /grafana {
             proxy_pass http://grafana_service;
         }
     }
