--- a/k8s/other-services/grafana.yml
+++ b/k8s/other-services/grafana.yml
@@ -55,3 +55,16 @@ spec:
     - protocol: TCP
       port: 3000
       targetPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: grafana-load-balancer-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: grafana
+  ports:
+    - protocol: TCP
+      port: 3000
+      targetPort: 3000
