--- a/k8s/other-services/prometheus.yml
+++ b/k8s/other-services/prometheus.yml
@@ -58,3 +58,16 @@ spec:
     - protocol: TCP
       port: 9090
       targetPort: 9090
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: prometheus-load-balancer-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: prometheus
+  ports:
+    - protocol: TCP
+      port: 9090
+      targetPort: 9090
