--- a/nginx.conf
+++ b/nginx.conf
@@ -22,13 +22,13 @@ http {
         server user-service:8000;
     }
 
-    upstream prometheus_service {
-        server prometheus-service:9090;
-    }
+    # upstream prometheus_service {
+    #     server prometheus-service:9090;
+    # }
 
-    upstream grafana_service {
-        server grafana-service:3000;
-    }
+    # upstream grafana_service {
+    #     server grafana-service:3000;
+    # }
 
     server {
         listen 80;
@@ -54,12 +54,12 @@ http {
             proxy_pass http://user_service/;
         }
 
-        location /prometheus {
-            proxy_pass http://prometheus_service;
-        }
+        # location /prometheus/ {
+        #     proxy_pass http://prometheus_service/;
+        # }
 
-        location /grafana {
-            proxy_pass http://grafana_service;
-        }
+        # location /grafana/ {
+        #     proxy_pass http://grafana_service/;
+        # }
     }
 }
