--- a/k8s/other-services/grafana.yml
+++ b/k8s/other-services/grafana.yml
@@ -25,6 +25,8 @@ spec:
       labels:
         app: grafana
     spec:
+      securityContext:
+        fsGroup: 65534
       containers:
         - name: grafana
           image: grafana/grafana:latest
