--- a/k8s/other-services/grafana.yml
+++ b/k8s/other-services/grafana.yml
@@ -32,9 +32,9 @@ spec:
           image: grafana/grafana:latest
           ports:
             - containerPort: 3000
-          envFrom:
-            - configMapRef:
-                name: app-config
+          # envFrom:
+          #   - configMapRef:
+          #       name: app-config
           volumeMounts:
             - name: grafana-storage
               mountPath: /var/lib/grafana
