--- a/k8s/other-services/prometheus.yml
+++ b/k8s/other-services/prometheus.yml
@@ -49,6 +49,19 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: prometheus-service
+spec:
+  type: ClusterIP
+  selector:
+    app: prometheus
+  ports:
+    - protocol: TCP
+      port: 9090
+      targetPort: 9090
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: prometheus-load-balancer-service
 spec:
   type: LoadBalancer
