--- a/k8s/databases/mongo.yml
+++ b/k8s/databases/mongo.yml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
         - name: mongodb
-          image: mongo
+          image: mongo:alpine
           ports:
             - containerPort: 27017
           envFrom:
