--- a/k8s/databases/postgresql.yml
+++ b/k8s/databases/postgresql.yml
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: postgres:alpine
+          image: postgres:15-alpine
           ports:
             - containerPort: 5432
           envFrom:
