--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,8 @@ dependencies = [
     "mdurl==0.1.2",
     "motor==3.7.1",
     "prometheus-client==0.23.1",
-    "psycopg>=3.2.10",
-    "psycopg-binary>=3.2.10",
+    "psycopg==3.2.10",
+    "psycopg-binary==3.2.10",
     "pydantic==2.11.7",
     "pydantic-core==2.33.2",
     "pydantic-settings==2.10.1",
@@ -63,6 +63,9 @@ dependencies = [
 
 [tool.uv.workspace]
 members = [
+    "auth_service",
+    "product_service",
+    "order_service",
     "admin_service",
-    "admin_service",
+    "user_service",
 ]
