--- a/nginx.conf
+++ b/nginx.conf
@@ -3,23 +3,23 @@ events {}
 http {
     
     upstream auth_service {
-        server auth-service:8000;
+        server auth-service;
     }
 
     upstream product_service {
-        server product-service:8000;
+        server product-service;
     }
 
     upstream order_service {
-        server order-service:8000;
+        server order-service;
     }
 
     upstream admin_service {
-        server admin-service:8000;
+        server admin-service;
     }
 
     upstream user_service {
-        server user-service:8000;
+        server user-service;
     }
 
     # upstream prometheus_service {
