--- a/auth_service/Dockerfile
+++ b/auth_service/Dockerfile
@@ -1,26 +1,23 @@
-# FROM python:latest
-
-# WORKDIR /app
-
-# COPY . .
-
-# RUN pip install --upgrade pip
-# RUN pip install --no-cache-dir -r requirements.txt
-
-# EXPOSE 8000
-
-# CMD ["fastapi", "run", "./src/main.py"]
-
 FROM python:3.12-slim
 
 WORKDIR /app
 
 COPY . .
 
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+# Uv implementation
 
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 RUN uv sync --no-cache
 
 EXPOSE 80
 
 CMD ["uv", "run", "fastapi", "run", "./src/main.py", "--proxy-headers", "--port", "80"]
+
+# Pip implementation
+
+# RUN pip install --upgrade pip
+# RUN pip install --no-cache-dir -r requirements.txt
+
+# EXPOSE 80
+
+# CMD ["fastapi", "run", "./src/main.py", "--proxy-headers", "--port", "80"]
